--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -4,16 +4,17 @@ on:
     branches:
       - main
 
-variables: 
-  project_name: DummyCI
-  scheme: DummyCI
-
 jobs:
   deploy:
     name: Deploying to Testflight
     runs-on: macOS-latest
 
     steps:
+      - name: Set global variables
+        run: |
+          echo "DummyCI" > PROJECT_NAME
+          echo "DummyCI" > SCRIPT
+
       - name: Checkout repository
         uses: actions/checkout@v1
 
@@ -21,7 +22,7 @@ jobs:
         run: |
           set -eo pipefail
 
-          xcodebuild -project ${project_name}.xcodeproj \
+          xcodebuild -project $(cat PROJECT_NAME).xcodeproj \
             -scheme $scheme
             -destination platform=iOS\ Simulator,OS=13.7,name=iPhone\ 11 \
             clean test | xcpretty
@@ -39,18 +40,18 @@ jobs:
         run: |
           set -eo pipefail
 
-          xcodebuild -project ${project_name}.xcodeproj \
-            -scheme ${scheme}
+          xcodebuild -project $(cat PROJECT_NAME).xcodeproj \
+            -scheme $(cat SCHEME)
             -sdk iphoneos \
             -configuration Release \
-            -archivePath $PWD/build/${project_name}.xcarchive \
+            -archivePath $PWD/build/$(cat PROJECT_NAME).xcarchive \
             clean archive | xcpretty
 
       - name: Exporting .ipa
         run: |
           set -eo pipefail
 
-          xcodebuild -archivePath $PWD/build/${project_name}.xcarchive \
+          xcodebuild -archivePath $PWD/build/$(cat PROJECT_NAME).xcarchive \
             -exportOptionsPlist ExportOptions.plist \
             -exportPath $PWD/build \
             -allowProvisioningUpdates \
@@ -61,4 +62,4 @@ jobs:
         env:
           APPLEID_USERNAME: ${{ secrets.APPLEID_USERNAME }}
           APPLEID_PASSWORD: ${{ secrets.APPLEID_PASSWORD }}
-        run: xcrun altool --upload-app -t ios -f build/${project_name}.ipa -u "$APPLEID_USERNAME" -p "$APPLEID_PASSWORD" --verbose
+        run: xcrun altool --upload-app -t ios -f build/$(cat PROJECT_NAME).ipa -u "$APPLEID_USERNAME" -p "$APPLEID_PASSWORD" --verbose
