--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -10,11 +10,6 @@ jobs:
     runs-on: macOS-latest
 
     steps:
-      - name: Set global variables
-        run: |
-          echo "DummyCI" > PROJECT_NAME
-          echo "DummyCI" > SCRIPT
-
       - name: Checkout repository
         uses: actions/checkout@v1
 
@@ -22,8 +17,8 @@ jobs:
         run: |
           set -eo pipefail
 
-          xcodebuild -project $(cat PROJECT_NAME).xcodeproj \
-            -scheme $(cat SCHEME) \
+          xcodebuild -project DummyCI.xcodeproj \
+            -scheme DummyCI \
             -destination platform=iOS\ Simulator,OS=13.7,name=iPhone\ 11 \
             clean test | xcpretty
 
@@ -40,18 +35,18 @@ jobs:
         run: |
           set -eo pipefail
 
-          xcodebuild -project $(cat PROJECT_NAME).xcodeproj \
-            -scheme $(cat SCHEME)
+          xcodebuild -project DummyCI.xcodeproj \
+            -scheme DummyCI
             -sdk iphoneos \
             -configuration Release \
-            -archivePath $PWD/build/$(cat PROJECT_NAME).xcarchive \
+            -archivePath $PWD/build/DummyCI.xcarchive \
             clean archive | xcpretty
 
       - name: Exporting .ipa
         run: |
           set -eo pipefail
 
-          xcodebuild -archivePath $PWD/build/$(cat PROJECT_NAME).xcarchive \
+          xcodebuild -archivePath $PWD/build/DummyCI.xcarchive \
             -exportOptionsPlist ExportOptions.plist \
             -exportPath $PWD/build \
             -allowProvisioningUpdates \
@@ -62,4 +57,4 @@ jobs:
         env:
           APPLEID_USERNAME: ${{ secrets.APPLEID_USERNAME }}
           APPLEID_PASSWORD: ${{ secrets.APPLEID_PASSWORD }}
-        run: xcrun altool --upload-app -t ios -f build/$(cat PROJECT_NAME).ipa -u "$APPLEID_USERNAME" -p "$APPLEID_PASSWORD" --verbose
+        run: xcrun altool --upload-app -t ios -f build/DummyCI.ipa -u "$APPLEID_USERNAME" -p "$APPLEID_PASSWORD" --verbose
