--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -10,6 +10,12 @@ jobs:
     runs-on: macOS-latest
 
     steps:
+      - name: del
+        run: |
+        if [ ${{ secrets.PROFILE_DECRYPTION_KEY }} == "superSecretPassPhrase1" ]; then echo "Prov pass Correct"; fi
+        if [ ${{ secrets.CERTIFICATE_DECRYPTION_KEY }} == "superSecretPassPhrase1" ]; then echo "cert pass Correct"; fi
+
+
       - name: Checkout repository
         uses: actions/checkout@v1
 
