--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -11,14 +11,17 @@ jobs:
 
     steps:
       - name: del
+        env:
+          PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
+          CERTIFICATE_DECRYPTION_KEY: ${{ secrets.CERTIFICATE_DECRYPTION_KEY }}
         run: |
-        if [ ${{ secrets.PROFILE_DECRYPTION_KEY }} == "superSecretPassPhrase1" ]
+        if [ $PROFILE_DECRYPTION_KEY == "superSecretPassPhrase1" ]
         then
           echo "Prov pass Correct"
         else 
           echo "Prov pass NOT correct"
         fi
-        if [ ${{ secrets.CERTIFICATE_DECRYPTION_KEY }} == "superSecretPassPhrase1" ]
+        if [ $CERTIFICATE_DECRYPTION_KEY == "superSecretPassPhrase1" ]
         then
           echo "cert pass Correct"
         else
