--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -10,25 +10,6 @@ jobs:
     runs-on: macOS-latest
 
     steps:
-      - name: del
-        env:
-          PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
-          CERTIFICATE_DECRYPTION_KEY: ${{ secrets.CERTIFICATE_DECRYPTION_KEY }}
-        run: |
-          if [ "$PROFILE_DECRYPTION_KEY" == "superSecretPassPhrase1" ]
-          then
-            echo "Prov pass Correct"
-          else 
-            echo "Prov pass NOT correct"
-          fi
-          if [ "$CERTIFICATE_DECRYPTION_KEY" == "superSecretPassPhrase1" ]
-          then
-            echo "cert pass Correct"
-          else
-            echo "cert pass NOT Correct"
-          fi
-
-
       - name: Checkout repository
         uses: actions/checkout@v1
 
@@ -48,28 +29,28 @@ jobs:
         env:
           PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
           CERTIFICATE_DECRYPTION_KEY: ${{ secrets.CERTIFICATE_DECRYPTION_KEY }}
-        # run: ./.github/secrets/decrypt_secrets.sh
-        run: |
-          set -eo pipefail
+        run: ./.github/secrets/decrypt_secrets.sh
+        # run: |
+          # set -eo pipefail
 
-          PROFILE_NAME="ca97b3a8-94d4-466e-837c-5029c83aea58.mobileprovision"
+          # PROFILE_NAME="ca97b3a8-94d4-466e-837c-5029c83aea58.mobileprovision"
 
-          gpg --verbose --batch --yes --decrypt --passphrase="$PROFILE_DECRYPTION_KEY" --output ./.github/secrets/${PROFILE_NAME} ./.github/secrets/${PROFILE_NAME}.gpg
-          gpg --verbose --batch --yes --decrypt --passphrase="$CERTIFICATE_DECRYPTION_KEY" --output ./.github/secrets/Certificates.p12 ./.github/secrets/Certificates.p12.gpg
+          # gpg --verbose --batch --yes --decrypt --passphrase="$PROFILE_DECRYPTION_KEY" --output ./.github/secrets/${PROFILE_NAME} ./.github/secrets/${PROFILE_NAME}.gpg
+          # gpg --verbose --batch --yes --decrypt --passphrase="$CERTIFICATE_DECRYPTION_KEY" --output ./.github/secrets/Certificates.p12 ./.github/secrets/Certificates.p12.gpg
           
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          # mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           
-          cp ./.github/secrets/${PROFILE_NAME} ~/Library/MobileDevice/Provisioning\ Profiles/${PROFILE_NAME}
+          # cp ./.github/secrets/${PROFILE_NAME} ~/Library/MobileDevice/Provisioning\ Profiles/${PROFILE_NAME}
           
           
-          security create-keychain -p "" build.keychain
-          security import ./.github/secrets/Certificates.p12 -t agg -k ~/Library/Keychains/build.keychain -P "" -A
+          # security create-keychain -p "" build.keychain
+          # security import ./.github/secrets/Certificates.p12 -t agg -k ~/Library/Keychains/build.keychain -P "" -A
           
-          security list-keychains -s ~/Library/Keychains/build.keychain
-          security default-keychain -s ~/Library/Keychains/build.keychain
-          security unlock-keychain -p "" ~/Library/Keychains/build.keychain
+          # security list-keychains -s ~/Library/Keychains/build.keychain
+          # security default-keychain -s ~/Library/Keychains/build.keychain
+          # security unlock-keychain -p "" ~/Library/Keychains/build.keychain
           
-          security set-key-partition-list -S apple-tool:,apple: -s -k "" ~/Library/Keychains/build.keychain
+          # security set-key-partition-list -S apple-tool:,apple: -s -k "" ~/Library/Keychains/build.keychain
 
       - name: Archiving project
         run: |
