--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -33,30 +33,28 @@ jobs:
         run: |
           set -eo pipefail
 
-          # del
-          if [ "$PROFILE_DECRYPTION_KEY" == "superSecretPassPhrase1" ]
-          then
-            echo "Prov pass Correct"
-          else 
-            echo "Prov pass NOT correct"
-          fi
-          if [ "$CERTIFICATE_DECRYPTION_KEY" == "superSecretPassPhrase1" ]
-          then
-            echo "cert pass Correct"
-          else
-            echo "cert pass NOT Correct"
-          fi
-          # del
-
           PROFILE_NAME="ca97b3a8-94d4-466e-837c-5029c83aea58.mobileprovision"
+
+          # Decrypting files
+          echo "Decrypting files"
 
           gpg --verbose --batch --yes --decrypt --passphrase="$PROFILE_DECRYPTION_KEY" --output ./.github/secrets/${PROFILE_NAME} ./.github/secrets/${PROFILE_NAME}.gpg
           gpg --verbose --batch --yes --decrypt --passphrase="$CERTIFICATE_DECRYPTION_KEY" --output ./.github/secrets/Certificates.p12 ./.github/secrets/Certificates.p12.gpg
           
+          echo "Finished decryption"
+
+
+          # Moving Profile to destination
+          echo "Moving Profile to destination"
+
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          
           cp ./.github/secrets/${PROFILE_NAME} ~/Library/MobileDevice/Provisioning\ Profiles/${PROFILE_NAME}
           
+          echo "Moved profile"
+          
+
+          # Adding certificate to keychain
+          echo "Adding certificate to keychain"
           
           security create-keychain -p "" build.keychain
           security import ./.github/secrets/Certificates.p12 -t agg -k ~/Library/Keychains/build.keychain -P "" -A
