--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -51,24 +51,22 @@ jobs:
           cp ./.github/secrets/${PROFILE_NAME} ~/Library/MobileDevice/Provisioning\ Profiles/${PROFILE_NAME}
           
           echo "Moved profile"
-          
 
-          # del
-          FILE=./.github/secrets/Certificates.p12
-          if test -f "$FILE"; then echo "$FILE exists."; fi
-          # del
 
           # Adding certificate to keychain
           echo "Adding certificate to keychain"
 
-          security create-keychain -p "" build.keychain
-          security import ./.github/secrets/Certificates.p12 -t agg -k ~/Library/Keychains/build.keychain -P "" -A
+          KEYCHAIN=~/Library/Keychains/build.keychain
+          PASS_PHRASE="Gonnai"
+
+          security create-keychain -p $PASS_PHRASE build.keychain
+          security import ./.github/secrets/Certificates.p12 -t agg -k $KEYCHAIN -P $PASS_PHRASE -A
           
-          security list-keychains -s ~/Library/Keychains/build.keychain
-          security default-keychain -s ~/Library/Keychains/build.keychain
-          security unlock-keychain -p "" ~/Library/Keychains/build.keychain
+          security list-keychains -s $KEYCHAIN
+          security default-keychain -s $KEYCHAIN
+          security unlock-keychain -p $PASS_PHRASE $KEYCHAIN
           
-          security set-key-partition-list -S apple-tool:,apple: -s -k "" ~/Library/Keychains/build.keychain
+          security set-key-partition-list -S apple-tool:,apple: -s -k "" $KEYCHAIN
 
       - name: Archiving project
         run: |
