--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -31,6 +31,8 @@ jobs:
           CERTIFICATE_DECRYPTION_KEY: ${{ secrets.CERTIFICATE_DECRYPTION_KEY }}
         # run: ./.github/secrets/decrypt_secrets.sh
         run: |
+          # set -eo pipefail
+
           PROFILE_NAME="ca97b3a8-94d4-466e-837c-5029c83aea58.mobileprovision"
 
           # Decrypting files
@@ -59,6 +61,7 @@ jobs:
 
           security create-keychain -p $PASS_PHRASE build.keychain
           security import ./.github/secrets/Certificates.p12 -t agg -k $KEYCHAIN -P $PASS_PHRASE -A
+          echo $?
           
           # security list-keychains -s $KEYCHAIN
           # security default-keychain -s $KEYCHAIN
