--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -60,7 +60,7 @@ jobs:
           PASS_PHRASE="Gonnai"
 
           security create-keychain -p $PASS_PHRASE build.keychain
-          security unlock-keychain -p $PASS_PHRASE $KEYCHAIN
+          security unlock-keychain -p $PASS_PHRASE "fakePass"
           security import ./.github/secrets/Certificates.p12 -t agg -k $KEYCHAIN -P $PASS_PHRASE -A
           echo $?
           
