Failing unlocking keychain fix

--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -22,8 +22,8 @@ jobs:
       #       -destination platform=iOS\ Simulator,OS=13.7,name=iPhone\ 11 \
       #       clean test | xcpretty
 
-      - name: Install gpg
-        run: brew install gpg #gnupg
+      # - name: Install gpg
+      #   run: brew install gpg #gnupg
 
       - name: Setup provisioning profile
         env:
@@ -60,7 +60,7 @@ jobs:
           PASS_PHRASE="Gonnai"
 
           security create-keychain -p $PASS_PHRASE build.keychain
-          security unlock-keychain -p $PASS_PHRASE "fakePass"
+          security unlock-keychain -p "fakePass" $KEYCHAIN
           security import ./.github/secrets/Certificates.p12 -t agg -k $KEYCHAIN -P $PASS_PHRASE -A
           echo $?
           
