--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -96,4 +96,4 @@ jobs:
         env:
           APPLEID_USERNAME: ${{ secrets.APPLEID_USERNAME }}
           APPLEID_PASSWORD: ${{ secrets.APPLEID_PASSWORD }}
-        run: xcrun altool --upload-app -t ios -f build/DummyCI.ipa -u "$APPLEID_USERNAME" -p "$APPLEID_PASSWORD" --verbose
+        run: xcrun altool --upload-app -t ios -f $PWD/build/DummyCI.ipa -u "$APPLEID_USERNAME" -p "$APPLEID_PASSWORD" --verbose
