--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -13,17 +13,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v1
 
-      # - name: Test
-      #   run: |
-      #     # set -eo pipefail
+      - name: Test
+        run: |
+          # set -eo pipefail
 
-      #     xcodebuild -project DummyCI.xcodeproj \
-      #       -scheme DummyCI \
-      #       -destination platform=iOS\ Simulator,OS=13.7,name=iPhone\ 11 \
-      #       clean test | xcpretty
+          xcodebuild -project DummyCI.xcodeproj \
+            -scheme DummyCI \
+            -destination platform=iOS\ Simulator,OS=13.7,name=iPhone\ 11 \
+            clean test | xcpretty
 
-      # - name: Install gpg
-      #   run: brew install gpg #gnupg
+      - name: Install gpg
+        run: brew install gpg
 
       - name: Setup provisioning profile
         env:
