--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -16,8 +16,10 @@ jobs:
         - name: Test script
           env: 
             PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
-          run: ./.github/scripts/dummy_script.sh
-          # run: sh DummyScript.sh
+          run: |
+            ls -l ./.github/scripts/dummy_script.sh
+            ./.github/scripts/dummy_script.sh
+            
 
       # - name: Checkout repository
       #   uses: actions/checkout@v1
