--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -13,16 +13,11 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@v1
 
-        - name: Test script
+        - name: Make shells executable
           env: 
             PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
           run: |
-            chmod +x ./.github/scripts/dummy_script.sh
-            ./.github/scripts/dummy_script.sh
-            
-
-      # - name: Checkout repository
-      #   uses: actions/checkout@v1
+            chmod +x ./.github/scripts/decrypt_secrets.sh
 
       # - name: Test
       #   run: |
@@ -36,50 +31,49 @@ jobs:
       # - name: Install gpg
       #   run: brew install gpg
 
-      # - name: Setup provisioning profile
-      #   env:
-      #     PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
-      #     CERTIFICATE_DECRYPTION_KEY: ${{ secrets.CERTIFICATE_DECRYPTION_KEY }}
-      #     P12_PASSPHRASE: ${{ secrets.P12_PASSPHRASE }}
-      #   # run: |
-      #   #   exec .github/secrets/decrypt_secrets.sh
+      - name: Setup provisioning profile
+        env:
+          PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
+          CERTIFICATE_DECRYPTION_KEY: ${{ secrets.CERTIFICATE_DECRYPTION_KEY }}
+          P12_PASSPHRASE: ${{ secrets.P12_PASSPHRASE }}
+        run: ./.github/secrets/decrypt_secrets.sh
       #   run: |
-      #     set -eo pipefail
+          # set -eo pipefail
 
-      #     PROFILE_NAME="Dummy_Wildcard_iOS_Distribution_Profile.mobileprovision"
+          # PROFILE_NAME="Dummy_Wildcard_iOS_Distribution_Profile.mobileprovision"
 
-      #     # Decrypting files
-      #     echo "Decrypting files"
+          # # Decrypting files
+          # echo "Decrypting files"
 
-      #     gpg --verbose --batch --yes --decrypt --passphrase="$PROFILE_DECRYPTION_KEY" --output ./.github/secrets/${PROFILE_NAME} ./.github/secrets/${PROFILE_NAME}.gpg
-      #     gpg --verbose --batch --yes --decrypt --passphrase="$CERTIFICATE_DECRYPTION_KEY" --output ./.github/secrets/Certificates.p12 ./.github/secrets/Certificates.p12.gpg
+          # gpg --verbose --batch --yes --decrypt --passphrase="$PROFILE_DECRYPTION_KEY" --output ./.github/secrets/${PROFILE_NAME} ./.github/secrets/${PROFILE_NAME}.gpg
+          # gpg --verbose --batch --yes --decrypt --passphrase="$CERTIFICATE_DECRYPTION_KEY" --output ./.github/secrets/Certificates.p12 ./.github/secrets/Certificates.p12.gpg
           
-      #     echo "Finished decryption"
+          # echo "Finished decryption"
 
 
-      #     # Moving Profile to destination
-      #     echo "Moving Profile to destination"
+          # # Moving Profile to destination
+          # echo "Moving Profile to destination"
 
-      #     mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-      #     cp ./.github/secrets/${PROFILE_NAME} ~/Library/MobileDevice/Provisioning\ Profiles/${PROFILE_NAME}
+          # mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          # cp ./.github/secrets/${PROFILE_NAME} ~/Library/MobileDevice/Provisioning\ Profiles/${PROFILE_NAME}
           
-      #     echo "Moved profile"
+          # echo "Moved profile"
 
 
-      #     # Adding certificate to keychain
-      #     echo "Adding certificate to keychain"
+          # # Adding certificate to keychain
+          # echo "Adding certificate to keychain"
 
-      #     KEYCHAIN=~/Library/Keychains/build.keychain
-      #     PASS_PHRASE="some"
+          # KEYCHAIN=~/Library/Keychains/build.keychain
+          # PASS_PHRASE="some"
 
-      #     security create-keychain -p $PASS_PHRASE build.keychain
-      #     security import ./.github/secrets/Certificates.p12 -t agg -k $KEYCHAIN -P $P12_PASSPHRASE -A
+          # security create-keychain -p $PASS_PHRASE build.keychain
+          # security import ./.github/secrets/Certificates.p12 -t agg -k $KEYCHAIN -P $P12_PASSPHRASE -A
           
-      #     security list-keychains -s $KEYCHAIN
-      #     security default-keychain -s $KEYCHAIN
-      #     security unlock-keychain -p $PASS_PHRASE $KEYCHAIN
+          # security list-keychains -s $KEYCHAIN
+          # security default-keychain -s $KEYCHAIN
+          # security unlock-keychain -p $PASS_PHRASE $KEYCHAIN
           
-      #     security set-key-partition-list -S apple-tool:,apple: -s -k $PASS_PHRASE $KEYCHAIN
+          # security set-key-partition-list -S apple-tool:,apple: -s -k $PASS_PHRASE $KEYCHAIN
 
       # - name: Archiving project
       #   run: |
