--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -14,22 +14,15 @@ jobs:
           uses: actions/checkout@v1
 
         - name: Make shells executable
-          env: 
-            PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
           run: |
+            chmod +x ./.github/scripts/*.sh
             chmod +x ./.github/secrets/decrypt_secrets.sh
 
-      # - name: Test
-      #   run: |
-      #     # set -eo pipefail
-
-      #     xcodebuild -project DummyCI.xcodeproj \
-      #       -scheme DummyCI \
-      #       -destination platform=iOS\ Simulator,OS=13.7,name=iPhone\ 11 \
-      #       clean test | xcpretty
-
-      # - name: Install gpg
-      #   run: brew install gpg
+        - name: Test
+          run: ./.github/scripts/test.sh
+  
+        - name: Install gpg
+          run: brew install gpg
 
         - name: Setup provisioning profile
           env:
@@ -37,43 +30,6 @@ jobs:
             CERTIFICATE_DECRYPTION_KEY: ${{ secrets.CERTIFICATE_DECRYPTION_KEY }}
             P12_PASSPHRASE: ${{ secrets.P12_PASSPHRASE }}
           run: ./.github/secrets/decrypt_secrets.sh
-      #   run: |
-          # set -eo pipefail
-
-          # PROFILE_NAME="Dummy_Wildcard_iOS_Distribution_Profile.mobileprovision"
-
-          # # Decrypting files
-          # echo "Decrypting files"
-
-          # gpg --verbose --batch --yes --decrypt --passphrase="$PROFILE_DECRYPTION_KEY" --output ./.github/secrets/${PROFILE_NAME} ./.github/secrets/${PROFILE_NAME}.gpg
-          # gpg --verbose --batch --yes --decrypt --passphrase="$CERTIFICATE_DECRYPTION_KEY" --output ./.github/secrets/Certificates.p12 ./.github/secrets/Certificates.p12.gpg
-          
-          # echo "Finished decryption"
-
-
-          # # Moving Profile to destination
-          # echo "Moving Profile to destination"
-
-          # mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          # cp ./.github/secrets/${PROFILE_NAME} ~/Library/MobileDevice/Provisioning\ Profiles/${PROFILE_NAME}
-          
-          # echo "Moved profile"
-
-
-          # # Adding certificate to keychain
-          # echo "Adding certificate to keychain"
-
-          # KEYCHAIN=~/Library/Keychains/build.keychain
-          # PASS_PHRASE="some"
-
-          # security create-keychain -p $PASS_PHRASE build.keychain
-          # security import ./.github/secrets/Certificates.p12 -t agg -k $KEYCHAIN -P $P12_PASSPHRASE -A
-          
-          # security list-keychains -s $KEYCHAIN
-          # security default-keychain -s $KEYCHAIN
-          # security unlock-keychain -p $PASS_PHRASE $KEYCHAIN
-          
-          # security set-key-partition-list -S apple-tool:,apple: -s -k $PASS_PHRASE $KEYCHAIN
 
       # - name: Archiving project
       #   run: |
