Added mac project

--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -11,6 +11,10 @@ jobs:
   deploy:
     name: Deploying to Testflight
     runs-on: macOS-latest
+    strategy:
+      matrix:
+        # destination: ["platform=iOS\ Simulator,OS=13.7,name=iPhone\ 11","platform=macOS"]
+        destination: ["platform=macOS"]
 
     steps:
         - name: Checkout repository
@@ -22,27 +26,29 @@ jobs:
             chmod +x ./.github/secrets/decrypt_secrets.sh
 
         - name: Test
+          env:
+            DESTINATION: ${{ matrix.destination }
           run: ./.github/scripts/test.sh
   
-        - name: Install gpg
-          run: brew install gpg
+        # - name: Install gpg
+        #   run: brew install gpg
 
-        - name: Setup provisioning profile
-          env:
-            PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
-            CERTIFICATE_DECRYPTION_KEY: ${{ secrets.CERTIFICATE_DECRYPTION_KEY }}
-            P12_PASSPHRASE: ${{ secrets.P12_PASSPHRASE }}
-          run: ./.github/secrets/decrypt_secrets.sh
+        # - name: Setup provisioning profile
+        #   env:
+        #     PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
+        #     CERTIFICATE_DECRYPTION_KEY: ${{ secrets.CERTIFICATE_DECRYPTION_KEY }}
+        #     P12_PASSPHRASE: ${{ secrets.P12_PASSPHRASE }}
+        #   run: ./.github/secrets/decrypt_secrets.sh
 
-        - name: Archiving project
-          run: ./.github/scripts/archive.sh
+        # - name: Archiving project
+        #   run: ./.github/scripts/archive.sh
       
-        - name: Exporting .ipa
-          run: ./.github/scripts/export_ipa.sh
+        # - name: Exporting .ipa
+        #   run: ./.github/scripts/export_ipa.sh
 
-        - name: Publishing app
-          if: success()
-          env:
-            APPLEID_USERNAME: ${{ secrets.APPLEID_USERNAME }}
-            APPLEID_PASSWORD: ${{ secrets.APPLEID_PASSWORD }}
-          run: ./.github/scripts/upload_app.sh
+        # - name: Publishing app
+        #   if: success()
+        #   env:
+        #     APPLEID_USERNAME: ${{ secrets.APPLEID_USERNAME }}
+        #     APPLEID_PASSWORD: ${{ secrets.APPLEID_PASSWORD }}
+        #   run: ./.github/scripts/upload_app.sh
