--- a/.github/workflows/TestFlightDeploy.yaml
+++ b/.github/workflows/TestFlightDeploy.yaml
@@ -24,21 +24,22 @@ jobs:
           run: |
             chmod +x ./.github/scripts/*.sh
             chmod +x ./.github/secrets/decrypt_secrets.sh
+  
+        - name: Install gpg
+          run: brew install gpg
+
+        - name: Setup provisioning profile
+          env:
+            PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
+            CERTIFICATE_DECRYPTION_KEY: ${{ secrets.CERTIFICATE_DECRYPTION_KEY }}
+            P12_PASSPHRASE: ${{ secrets.P12_PASSPHRASE }}
+            DEVELOPMENT_PROFILE_DECRYPTION_KEY: ${{ secrets.DEVELOPMENT_PROFILE_DECRYPTION_KEY }}
+          run: ./.github/secrets/decrypt_secrets.sh
 
         - name: Test
           env:
             DESTINATION: ${{ matrix.destination }}
           run: ./.github/scripts/test.sh
-  
-        # - name: Install gpg
-        #   run: brew install gpg
-
-        # - name: Setup provisioning profile
-        #   env:
-        #     PROFILE_DECRYPTION_KEY: ${{ secrets.PROFILE_DECRYPTION_KEY }}
-        #     CERTIFICATE_DECRYPTION_KEY: ${{ secrets.CERTIFICATE_DECRYPTION_KEY }}
-        #     P12_PASSPHRASE: ${{ secrets.P12_PASSPHRASE }}
-        #   run: ./.github/secrets/decrypt_secrets.sh
 
         # - name: Archiving project
         #   run: ./.github/scripts/archive.sh
